# AstralCommandeInterpreter

./: .gitignore  AstralCommmandeInterpreter.code-workspace  CreateUserName.bat  Makefile  README.md  exe.bat  exe.sh  makefile  meson.build
Code/Main/: main.c
Code/Programmes/commandes_System/: mv.c  rm.c
Code/Programmes/configure/: main.c
Code/Programmes/date/: date.c
Code/age/: main.c
Code/age/Lin/: main.c
Code/age/Win/: main.c
Code/commandes_System/: aff.c  ls.c  mv.c  rm.c  universallib.c  universallib.h
Code/configure/: main.c
Code/include/: universallib.h
Code/include/commandes_System/: ls.h  rm.h  touch.h
Code/include/date/: date.h
Code/lib/: universallib.c
Code/lib/H/: universallib.h
Code/lib/H/commandes_System/: aff.h  configure.h  mv.h  touch.h
Code/lib/H/poid_planetes/: main.h
Code/lib/commandes_System/: aff.c  ast(prototype).c  configure.c  ls.c  mv.c  touch.c
Code/lib/date/: date.c
Code/lib/poid_planetes/: main.c
Code/poid_planetes/: main.c
Programmes/Lin/: aff  age  date  ls  mv  poid  poid_planetes  rm
conf/: configure
etc/: astral.conf
