project('AstralCommandInterpreter', 'c')

executable('AstralCommandInterpreter', 'Code/Main/main.c', 'Code/lib/universallib.c')

# Pour utiliser meson, tu dois l'installer (ça parait logique)
# je conseille cette commande: pip install meson

# Tu vas sûrement aussi devoir installer Ninja
# Pour cela soit:
# - pip install ninja
# - winget install ninja-build.ninja

# Après ça pour compiler tu fais:
# 1. meson setup bin
# 2. meson compile -C bin
